--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -32,6 +33,9 @@ dependencies {
 
     // Jsoup -> 크롤링
     implementation 'org.jsoup:jsoup:1.16.1'
+
+    // h2
+    runtimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
