--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
 
     // h2
     runtimeOnly 'com.h2database:h2'
+
+    // mail
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
